[package]
name = "ci"
version = "0.1.0"
authors = ["David Pedersen <david.pdrsn@gmail.com>"]
edition = "2018"

[dependencies]
reqwest = "0.9.5"
serde_json = "1.0.34"
structopt = "0.2"
regex = "1.1.0"
lazy_static = "1.2.0"
rayon = "1.0.3"
serde_derive = "1.0.87"
serde = "1.0.87"
colored = "1.7.0"
git2 = "0.8.0"
