[package]
name = "ci"
version = "0.1.0"
authors = ["David Pedersen <david.pdrsn@gmail.com>"]
edition = "2018"

[dependencies]
reqwest = { version = "0.10.0-alpha.2", features = ["json"] }
tokio = "0.2.0-alpha.6"
serde_json = "1.0.34"
structopt = "0.2"
regex = "1.1.0"
lazy_static = "1.2.0"
rayon = "1.0.3"
serde_derive = "1.0.87"
serde = "1.0.87"
colored = "1.7.0"
git2 = "0.8.0"
